--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -24,7 +24,7 @@
     }
     #hamburger {
       display: none;
-      @media screen and (max-width: 480px) {
+      @media screen and (max-width: 1420px) {
         display: flex;
         position: sticky;
         z-index: 10;
@@ -36,7 +36,7 @@
     aside {
       width: 70%;
       justify-content: space-around;
-      @media screen and (max-width: 480px) {
+      @media screen and (max-width: 1420px) {
         display: none;
         &.active {
           display: flex;
@@ -56,7 +56,7 @@
         width: 380px;
         justify-content: space-evenly;
 
-        @media screen and (max-width: 480px) {
+        @media screen and (max-width: 1420px) {
           display: flex;
           flex-direction: column;
           text-align: center;
@@ -64,10 +64,10 @@
         li {
           font-weight: 500;
           list-style: none;
-          @media screen and (max-width: 480px) {
+          cursor: pointer;
+          @media screen and (max-width: 1420px) {
             margin-top: 15px;
             font-size: 1.2rem;
-            font-weight: 500;
             padding: 5px 25px;
             width: 100%;
           }
@@ -77,7 +77,7 @@
         align-items: center;
         justify-content: center;
 
-        @media screen and (max-width: 480px) {
+        @media screen and (max-width: 1420px) {
           display: flex;
           flex-direction: column;
           width: 100%;
@@ -97,7 +97,7 @@
           margin: 0 20px;
           font-family: $poppins-font;
           color: $back-text;
-          @media screen and (max-width: 480px) {
+          @media screen and (max-width: 1420px) {
             display: none;
           }
         }
@@ -405,7 +405,7 @@
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
-      @media screen and (max-width: 480px) {
+      @media screen and (max-width: 1500px) {
         display: none;
         width: 100%;
         margin-bottom: 40px;
