--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -6,130 +6,215 @@
   header {
     margin-top: 30px;
     width: 100%;
+    min-width: 918px;
+
     height: 80px;
     justify-content: space-between;
 
-    .site__section__title {
-      color: $main-text;
-      width: 380px;
-      justify-content: flex-start;
-      margin: 0 1rem;
-      li {
-        font-weight: 500;
-        list-style: none;
-      }
+    @media screen and (max-width: 1020px) {
+      min-width: 0;
+      width: 80vw;
+    }
+
+    img {
+      height: 100%;
     }
     .logoWrapper {
       height: 100%;
+      display: flex;
       align-items: flex-end;
-      img {
-        height: 100%;
+      @media screen and (max-width: 470px) {
+        font-size: 1em;
       }
+
       p {
         margin-bottom: 1.2%;
         font-size: 1.2em;
+        color: $main-text;
+        @media screen and (max-width: 470px) {
+          font-size: 1em;
+        }
+        @media screen and (max-width: 400px) {
+          height: 0.75em;
+        }
+      }
+      img {
+        @media screen and (max-width: 470px) {
+          height: 80%;
+        }
+        @media screen and (max-width: 400px) {
+          height: 50%;
+        }
+      }
+    }
+    #hamburger {
+      display: none;
+      @media screen and (max-width: 1420px) {
+        display: flex;
+        position: sticky;
+        z-index: 10;
+        justify-self: flex-end;
+        right: 3rem;
+        cursor: pointer;
+        min-width: 25px;
       }
     }
     aside {
-      width: 100%;
+      width: 70%;
       justify-content: flex-end;
+      @media screen and (max-width: 1420px) {
+        display: none;
+        &.active {
+          display: flex;
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          flex-direction: column;
+          background-color: black;
+          z-index: 5;
+          justify-content: center;
+        }
+      }
       .headerList {
         color: $main-text;
+        width: 380px;
         justify-content: space-evenly;
+
+        @media screen and (max-width: 1420px) {
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+        }
         li {
-          margin-left: 20px;
           font-weight: 500;
           list-style: none;
           cursor: pointer;
-        }
-      }
-      .btnWrapper {
-        align-items: center;
-        justify-content: center;
-        p {
-          margin: 0 20px;
-          font-family: $poppins-font;
-          color: $back-text;
+          @media screen and (max-width: 1420px) {
+            margin-top: 15px;
+            font-size: 1.2rem;
+            padding: 5px 25px;
+            width: 100%;
+          }
         }
       }
     }
   }
   .mainSection {
     width: 100%;
-    .search__area {
-      width: 100%;
-      position: relative;
-      input {
-        background-color: #1b1b1b;
-        width: inherit;
-        height: 84px;
-        margin-bottom: 76px;
-        border: 0;
-        border-radius: 6px;
-        padding: 28px 38px;
-        color: #5c5c5c;
-        font-weight: 500;
-        font-size: 24px;
-      }
-      img {
-        position: absolute;
-        justify-content: center;
-        align-items: center;
-        padding: 28px;
-        right: 38px;
-      }
-    }
-
-    .help__center__content {
-      // width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      // flex-direction: row;
-      // padding: 0 16.825%;
-      $margin_item: 0.75rem;
-      .item {
-        width: calc(100% / 3 - 1.5rem);
-        display: flex;
-        background-color: #1b1b1b;
-        height: 300px;
-        justify-content: center;
-        align-items: center;
-        flex: 0 0 calc(100% / 3 - 1.5rem);
-        flex-direction: column;
-        margin: $margin_item;
-        &:nth-child(3n + 2) {
-          img {
-            width: calc(1920px * 0.0525);
-            position: relative;
-            top: 15px;
-          }
-          p {
-            position: relative;
-            top: -20px;
-          }
-        }
-        &:nth-child(3n + 3) {
-          img {
-            width: calc(1920px * 0.0425);
-          }
-        }
-      }
-    }
+    // min-width: 918px;
     margin-top: 80px;
     text-align: center;
+
     h1 {
       font-size: 4em;
       font-weight: 700;
-
-      width: 962px;
       color: $main-text;
+      margin-bottom: 40px;
+      @media screen and (max-width: 437px) {
+        font-size: 3em;
+      }
+      @media screen and (max-width: 330px) {
+        font-size: 2em;
+      }
     }
     p {
       font-size: 1.2em;
       font-weight: 50;
       margin: 30px 0;
-      width: 900px;
       color: $gray;
+    }
+
+    .search__area {
+      width: 100%;
+      position: relative;
+
+      @media screen and (max-width: 1020px) {
+        width: 80vw;
+      }
+
+      input {
+        background-color: #1b1b1b;
+        width: inherit;
+        height: 84px;
+        margin-bottom: 45px;
+        border: 0;
+        border-radius: 6px;
+        padding: 28px 38px;
+        color: $main-text;
+        font-weight: 500;
+        font-size: 1.58em;
+        outline: none;
+        @media screen and (max-width: 1020px) {
+          height: 54px;
+          font-size: 1.4em;
+        }
+      }
+      img {
+        position: absolute;
+
+        padding: 28px 0;
+        right: 3.5%;
+        @media screen and (max-width: 1020px) {
+          margin-top: 16px;
+          right: 4%;
+          padding: 0;
+          width: 28px;
+        }
+      }
+    }
+
+    .help__center__content {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 320px 320px;
+      $margin_item: 0.75rem;
+      @media screen and (max-width: 1020px) {
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        justify-content: space-evenly;
+      }
+      .item {
+        display: flex;
+        background-color: #1b1b1b;
+        height: 300px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: $margin_item;
+        cursor: pointer;
+
+        img {
+          // width: calc(1920px * 0.0425);
+          width: 110px;
+        }
+
+        @media screen and (max-width: 1020px) {
+          width: 80vw;
+          height: 340px;
+          padding: 20px 0;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          img {
+            width: 21%;
+          }
+          p {
+            font-size: 1.5em;
+          }
+        }
+        @media screen and (max-width: 630px) {
+          img {
+            width: 120px;
+          }
+        }
+      }
     }
   }
   footer {
@@ -140,6 +225,51 @@
     flex-direction: column;
     justify-content: space-evenly;
     color: $main-text;
+
+    margin-top: 120px;
+
+    @media screen and (max-width: 480px) {
+      display: grid;
+      height: unset;
+      margin-top: 80px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-areas: 'site site' 'logo hotlink';
+      & > div {
+        grid-area: logo;
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+        align-items: center !important;
+        img {
+          width: 80px !important;
+        }
+      }
+
+      & > main {
+        grid-area: site;
+      }
+
+      & > aside {
+        grid-area: hotlink;
+        display: flex;
+        flex-direction: column;
+        .row {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+          height: 100%;
+          main {
+            // align-self: flex-end;
+            justify-self: flex-end;
+            button {
+              font-size: 0.75rem;
+            }
+          }
+        }
+      }
+    }
     .top {
       align-items: flex-start;
       justify-content: center;
@@ -156,9 +286,11 @@
       width: 400px;
       align-items: flex-start;
       justify-content: space-between;
+      @media screen and (max-width: 480px) {
+        width: 100%;
+      }
       li {
         list-style: none;
-        cursor: pointer;
       }
       .bold {
         font-weight: 600;
@@ -172,9 +304,17 @@
       .row {
         width: 380px;
         justify-content: space-between;
+        @media screen and (max-width: 480px) {
+          width: 100%;
+        }
         .icons {
           width: 100px;
           justify-content: space-between;
+        }
+        @media screen and (max-width: 480px) {
+          .button {
+            font-size: 0.61em;
+          }
         }
       }
     }
