--- a/packages/client/src/sass/ContactPage-style.scss
+++ b/packages/client/src/sass/ContactPage-style.scss
@@ -7,51 +7,97 @@
   header {
     margin-top: 30px;
     width: 100%;
+    min-width: 918px;
+
     height: 80px;
     justify-content: space-between;
 
-    .site__section__title {
-      color: $main-text;
-      width: 380px;
-      justify-content: flex-start;
-      margin: 0 1rem;
-      li {
-        font-weight: 500;
-        list-style: none;
-      }
+    @media screen and (max-width: 1020px) {
+      min-width: 0;
+      width: 80vw;
+    }
+
+    img {
+      height: 100%;
     }
     .logoWrapper {
       height: 100%;
+      display: flex;
       align-items: flex-end;
-      img {
-        height: 100%;
+      @media screen and (max-width: 470px) {
+        font-size: 1em;
       }
+
       p {
         margin-bottom: 1.2%;
         font-size: 1.2em;
+        color: $main-text;
+        @media screen and (max-width: 470px) {
+          font-size: 1em;
+        }
+        @media screen and (max-width: 400px) {
+          height: 0.75em;
+        }
+      }
+      img {
+        @media screen and (max-width: 470px) {
+          height: 80%;
+        }
+        @media screen and (max-width: 400px) {
+          height: 50%;
+        }
       }
     }
-
+    #hamburger {
+      display: none;
+      @media screen and (max-width: 1500px) {
+        display: flex;
+        position: sticky;
+        z-index: 10;
+        justify-self: flex-end;
+        right: 3rem;
+        cursor: pointer;
+        min-width: 25px;
+      }
+    }
     aside {
-      width: 100%;
+      width: 70%;
       justify-content: flex-end;
+      @media screen and (max-width: 1500px) {
+        display: none;
+        &.active {
+          display: flex;
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          flex-direction: column;
+          background-color: black;
+          z-index: 5;
+          justify-content: center;
+        }
+      }
       .headerList {
         color: $main-text;
+        width: 380px;
         justify-content: space-evenly;
+
+        @media screen and (max-width: 1500px) {
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+        }
         li {
           font-weight: 500;
           list-style: none;
-          margin-left: 20px;
           cursor: pointer;
-        }
-      }
-      .btnWrapper {
-        align-items: center;
-        justify-content: center;
-        p {
-          margin: 0 20px;
-          font-family: $poppins-font;
-          color: $back-text;
+          @media screen and (max-width: 1500px) {
+            margin-top: 15px;
+            font-size: 1.2rem;
+            padding: 5px 25px;
+            width: 100%;
+          }
         }
       }
     }
@@ -60,9 +106,17 @@
     width: 100%;
     margin-top: 80px;
 
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    @media screen and (max-width: 1500px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
     .members {
+      grid-row: 1 / span 2;
+      order: 1;
       li {
         display: grid;
         grid-template-columns: 1fr 3fr;
@@ -74,7 +128,7 @@
           grid-row: 1;
         }
         .accentLine {
-          width: 100%;
+          width: 105px;
           height: 3px;
           margin-top: 9px;
 
@@ -99,88 +153,124 @@
         }
       }
     }
+    .contactInfoContainer {
+      width: 100%;
+      height: 350px;
+      order: 0;
 
-    aside {
-      width: 50%;
-      .contactInfoContainer {
+      align-items: flex-start;
+      justify-content: space-evenly;
+      padding-left: 25px;
+
+      border-radius: 5px;
+      background-color: $background;
+      @media screen and (max-width: 1500px) {
+        margin-bottom: 50px;
+      }
+      @media screen and (max-width: 770px) {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+      }
+      p {
         width: 100%;
-        height: 350px;
+        @media screen and (max-width: 770px) {
+          font-size: 1.3em;
+        }
+      }
+      .title {
+        width: 85%;
+        padding: 12px 30px;
 
-        align-items: flex-start;
-        justify-content: space-evenly;
-        padding-left: 25px;
+        display: flex;
+        align-items: center;
 
-        border-radius: 5px;
-        background-color: $background;
-        .title {
-          width: 70%;
-          padding: 12px 30px;
-
-          display: flex;
-          align-items: center;
-
-          background: $dark-gray;
-          color: $main-text;
-          font-size: 1.2em;
-          img {
-            margin-right: 10px;
+        background: $dark-gray;
+        color: $main-text;
+        font-size: 1.2em;
+        img {
+          margin-right: 10px;
+        }
+        @media screen and (max-width: 477px) {
+          p {
+            font-size: 0.9em;
           }
         }
-        .emailAdress {
-          color: $main-text;
-          margin-left: 50px;
-          img {
-            margin-right: 10px;
+        @media screen and (max-width: 390px) {
+          p {
+            font-size: 0.7em;
           }
         }
       }
-      footer {
-        width: 100%;
-        height: 320px;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
+      .emailAdress {
         color: $main-text;
-        .top {
-          align-items: flex-start;
-          justify-content: center;
-          img {
-            width: 9%;
-            margin-bottom: 25px;
+        margin-left: 50px;
+        @media screen and (max-width: 770px) {
+          margin-left: 0;
+        }
+        img {
+          margin-right: 10px;
+        }
+        p {
+          @media screen and (max-width: 770px) {
+            font-size: 1.3em;
+          }
+        }
+      }
+    }
+
+    footer {
+      order: 2;
+      width: 100%;
+      height: 320px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      color: $main-text;
+      @media screen and (max-width: 770px) {
+        display: none;
+      }
+      .top {
+        align-items: flex-start;
+        justify-content: center;
+        img {
+          width: 9%;
+          margin-bottom: 25px;
+        }
+        p {
+          font-weight: 500;
+          font-size: 1.1em;
+        }
+      }
+      .body {
+        width: 400px;
+        align-items: flex-start;
+        justify-content: space-between;
+        li {
+          list-style: none;
+          cursor: pointer;
+        }
+        .bold {
+          font-weight: 600;
+        }
+      }
+      aside {
+        p {
+          font-weight: 600;
+          margin-bottom: 8px;
+        }
+        .row {
+          width: 520px;
+          justify-content: space-between;
+          .icons {
+            width: 100px;
+            justify-content: space-between;
           }
           p {
             font-weight: 500;
-            font-size: 1.1em;
-          }
-        }
-        .body {
-          width: 400px;
-          align-items: flex-start;
-          justify-content: space-between;
-          li {
-            list-style: none;
-            cursor: pointer;
-          }
-          .bold {
-            font-weight: 600;
-          }
-        }
-        aside {
-          p {
-            font-weight: 600;
-            margin-bottom: 8px;
-          }
-          .row {
-            width: 520px;
-            justify-content: space-between;
-            .icons {
-              width: 100px;
-              justify-content: space-between;
-            }
-            p {
-              font-weight: 500;
-            }
           }
         }
       }
