--- a/packages/client/src/sass/MainPage-style.scss
+++ b/packages/client/src/sass/MainPage-style.scss
@@ -30,6 +30,15 @@
 
     @media screen and (max-width: 860px) {
       margin-left: 0;
+      padding: 0;
+      padding-top: 20px;
+      flex-direction: column;
+      align-items: flex-start;
+      width: auto;
+    }
+    
+    @media screen and (max-width: 480px) {
+      margin-left: 0;
       padding-top: 20px;
       flex-direction: column;
       align-items: center;
