refactor(settings): :lipstick: button positioning on input

--- a/packages/client/src/sass/SettingsPageElements/Account-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Account-style.scss
@@ -3,6 +3,7 @@
 .accountWrapper.hide {
   display: none;
 }
+
 .accountWrapper.show {
   display: flex;
 }
@@ -16,19 +17,46 @@
     font-size: 8em;
     color: $main-text;
   }
+
   .formWrapper {
     min-width: 50%;
+
     @media screen and (max-width: 768px) {
       min-width: 80%;
     }
+
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    .validateButton {
+      padding: 4px 22px;
+      border: none;
+      background: #0082ff;
+      border-radius: 5px;
+      font-size: 1em;
+      font-weight: 600;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .validationInfo {
+      position: absolute;
+      right: 0;
+      margin-top: 0.9%;
+      padding: 2.5% 20px;
+      background: #161616;
+      font-size: 1em;
+      font-family: 'Poppins', sans-serif;
+      color: #7f7f7f;
+    }
+
     .buttonWrapper {
       margin: 40px 0px;
     }
+
     .inputBoxWrapper {
       position: relative;
+
       .insideBox {
         position: absolute;
 
@@ -38,29 +66,35 @@
 
         text-align: right;
         pointer-events: none;
-        > p {
+
+        >p {
           font-size: 1em;
           color: $gray;
         }
       }
+
       .exist {
         bottom: 46px;
       }
+
       .noteText {
         font-size: 0.9em;
         color: $gray;
       }
     }
+
     .token {
       text-align: left;
       width: 500px;
       margin-left: 48px;
-      > p {
+
+      >p {
         font-size: 1em;
         color: $gray;
       }
     }
   }
+
   .buttonWrapperA {
     height: 12vh;
     margin-top: 76px;
