--- a/packages/client/src/sass/SettingsPageElements/Account-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Account-style.scss
@@ -30,7 +30,8 @@
     justify-content: center;
 
     .validateButton {
-      padding: 4px 22px;
+      margin-left: 12px;
+      padding: 6px 22px;
       border: none;
       background: #0082ff;
       border-radius: 5px;
