--- a/packages/client/src/sass/SettingsPageElements/Account-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Account-style.scss
@@ -13,6 +13,9 @@
   margin-left: 17.5%;
   margin-top: 40px;
 
+  @media screen and (max-width: 860px) {
+    margin: 0;
+  }
   p {
     font-size: 8em;
     color: $main-text;
