--- a/packages/client/src/sass/SettingsPageElements/Account-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Account-style.scss
@@ -31,7 +31,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    .m-left {
+      @media screen and (max-width: 768px) {
+        align-items: flex-start;
+      }
+    }
     .validateButton {
       margin-left: 12px;
       padding: 6px 22px;
@@ -41,6 +45,9 @@
       font-size: 1em;
       font-weight: 600;
       font-family: 'Poppins', sans-serif;
+      @media screen and (max-width: 768px) {
+        margin: 12px 0 0 0;
+      }
     }
 
     .validationInfo {
@@ -52,10 +59,14 @@
       font-size: 1em;
       font-family: 'Poppins', sans-serif;
       color: #7f7f7f;
+      @media screen and (max-width: 540px) {
+        font-size: 0.9em;
+      }
     }
 
     .buttonWrapper {
       margin: 40px 0px;
+      display: flex;
     }
 
     .inputBoxWrapper {
@@ -100,6 +111,18 @@
   }
 
   .buttonWrapperA {
+    @media screen and (max-width: 1200px) {
+      display: none;
+      // padding-left: 0;
+    }
+    &.mobile {
+      display: flex;
+      margin: 0 30px;
+      padding: 0;
+      button {
+        margin: 0 12px;
+      }
+    }
     margin: 30px 0;
     justify-content: flex-start;
     align-items: flex-start;
