--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -44,7 +44,7 @@
         line-height: 18px;
         color: #8c8c8c;
 
-        width: 800px;
+        width: 90%;
         a {
           color: #0082ff;
         }
